# trading-hub

./: .coveragerc  .gitattributes  .gitignore  .protection-test-marker  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  ORCHESTRATOR_CHARTER.md  README.md  SOUL.md  SYSTEM_STATE.md  btc5m-entrypoint.sh  dashboard.py  docker-compose.ai-hedge-fund-crypto.yml  docker-compose.hermestrader-dryrun.yml  docker-compose.yml  docker-compose.yml.bak.volumes  memory_backfill_cron.sh  pyproject.toml  pytest.ini
self_improvement_v2/: README.md  pyproject.toml  run_offline_episode.py
self_improvement_v2/cli/: __init__.py  offline_quality_gate.py  planning_checker.py
self_improvement_v2/config/: freqtrade_bots.readonly.json
self_improvement_v2/contracts/: README.md  rainbow_signal_envelope.schema.json
self_improvement_v2/cron_defs/: jobs.yaml  t4_watcher_jobs.yaml
self_improvement_v2/docs/: ADR_AI4TRADE_INTEGRATION_BOUNDARY.md  AI4TRADE_COMPATIBILITY_MATRIX.md  AI4TRADE_INTEGRATION_READINESS.md  AI4TRADE_REST_BOUNDARY_PROTOTYPE.md  AI4TRADE_REST_INTEGRATION.md  CI_OFFLINE_SMOKE.md  CONTROLLED_READ_ONLY_RUNTIME_PROBE_PLAN.md  CRON_ACTIVATION_CEREMONY.md  DRY_RUN_READINESS.md  FULL_E2E_DRY_RUN_PIPELINE.md  LIVE_MUTATION_APPROVAL_CEREMONY.md  OFFLINE_SYSTEM_ARCHITECTURE_INDEX.md  PHASE_M_APPROVAL_PAYLOAD_DRAFT.md  RCA-REBEL-TELEGRAM-CONFLICT.md  RCA-WATCHDOG-CONNECTIVITY.md  README.md  READ_ONLY_ADAPTER_CONTRACTS.md  REAL_ADAPTER_DESIGN.md  REAL_ADAPTER_RISKS.md  RUNTIME_SHADOW_OBSERVATION.md  STRATEGY_ADAPTER_DESIGN.md  TELEGRAM_APPROVAL_ADAPTER_DESIGN.md  TEST_BASELINE_DRIFT_ISSUE_18.md  V1_RESIDUE_CLOSURE_PLAN.md  V1_TO_V2_CRON_MIGRATION.md  market_data_readiness_spec_v1.md
self_improvement_v2/episode/: offline_episode_manifest.json
self_improvement_v2/evidence/: dry_run_evidence.schema.json  evidence_bundle.schema.json  evidence_bundle_integrity.py  evidence_bundle_integrity_manifest.json  external_evidence_record.schema.json  (+2 more)
(+3698 files in other folders)
