[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.buildMeta"

[project]
name = "si-v2"
version = "0.1.0"
description = "Self-Improvement v2 Foundation for trading bot optimization"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
exclude = ["tests/fixtures/strategies/invalid_python_strategy.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["TC001", "TC003"]  # TYPE_CHECKING blocks — safe with from __future__ import annotations

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/strategies/invalid_python_strategy.py" = ["E", "F", "W", "SIM", "B"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
